# ghostwriter.ai

./: .gitignore  README.md
ghostwriter/: README.md  pyproject.toml  report.md
ghostwriter/src/ghostwriter/: crew.py  main.py
ghostwriter/src/ghostwriter/config/: agents.yaml  tasks.yaml
