[project]
name = "ghostwriter"
version = "0.1.0"
description = "ghostwriter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ghostwriter = "ghostwriter.main:run"
run_crew = "ghostwriter.main:run"
train = "ghostwriter.main:train"
replay = "ghostwriter.main:replay"
test = "ghostwriter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
